--- a/Project.toml
+++ b/Project.toml
@@ -13,7 +13,10 @@ Xtals = "ede5f01d-793e-4c47-9885-c447d1f18d6d"
 
 [compat]
 FIGlet = "0.2"
+Graphs = "1.4"
+PyCall = "1.92"
 Xtals = "0.3"
+julia = "1.6"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
