--- a/.github/workflows/ci_testing.yml
+++ b/.github/workflows/ci_testing.yml
@@ -71,7 +71,9 @@ jobs: # run in parallel within workflow
         uses: julia-actions/julia-buildpkg@latest
       
       - name: install dependencies
-        run: julia --project --color=yes -e 'import Pkg; Pkg.add.(["Documenter"])'
+        run: |
+          julia --project ./quick_setup.jl
+          julia --project --color=yes -e 'import Pkg; Pkg.add.(["Documenter"])'
         shell: bash
       
       - name: run tests
