--- a/.github/workflows/ci_testing.yml
+++ b/.github/workflows/ci_testing.yml
@@ -12,12 +12,13 @@ concurrency: # only allow the most recent workflow to execute
   cancel-in-progress: true
 
 env: # environment variables
-  julia_version: '1.7.0' # julia version to use on all runners
+  julia_version: '1.7.1' # julia version to use on all runners
 
 jobs: # run in parallel within workflow
 
 
   unit-and-doc-tests:
+    timeout-minutes: 30
     runs-on: ubuntu-latest
     
     steps:
@@ -52,11 +53,14 @@ jobs: # run in parallel within workflow
           verbose: true
 
 
-  cross-platform:
-    runs-on: ${{ matrix.os }}
+  cross-platform-os:
+    if: github.ref_name == 'master'
     strategy:
+      fail-fast: true
       matrix:
-        os: [macos-latest, windows-latest]
+        os: [macos-latest, windows-latest, ubuntu-latest]
+    runs-on: ${{ matrix.os }}
+    timeout-minutes: 30
     
     steps:
       - name: checkout commit
@@ -71,9 +75,37 @@ jobs: # run in parallel within workflow
         uses: julia-actions/julia-buildpkg@latest
       
       - name: install dependencies
-        run: |
-          julia --project ./quick_setup.jl
-          julia --project --color=yes -e 'import Pkg; Pkg.add.(["Documenter"])'
+        run: julia --project --color=yes -e 'import Pkg; Pkg.add("Documenter")'
+        shell: bash
+      
+      - name: run tests
+        run: julia --project --color=yes -e 'import Pkg; Pkg.test()'
+        shell: bash
+
+  
+  cross-platform-julia:
+    if: github.ref_name == 'master'
+    strategy:
+      fail-fast: true
+      matrix:
+        julia: ['1.1.1', '1.2.0', '1.3.1', '1.4.2', '1.5.4', '1.6.4', '1.7.0']
+    runs-on: ubuntu-latest
+    timeout-minutes: 30
+    
+    steps:
+      - name: checkout commit
+        uses: actions/checkout@master
+
+      - name: set up Julia
+        uses: julia-actions/setup-julia@latest
+        with:
+          version: ${{ matrix.julia }}
+      
+      - name: build package
+        uses: julia-actions/julia-buildpkg@latest
+      
+      - name: install dependencies
+        run: julia --project --color=yes -e 'import Pkg; Pkg.add("Documenter")'
         shell: bash
       
       - name: run tests
