--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "XtalsPyTools"
 uuid = "eeb819d4-c189-4e83-a288-887db76b1875"
 authors = ["SimonEnsemble <cory.simon@oregonstate.edu>"]
-version = "0.0.1"
+version = "0.0.2"
 
 [deps]
 FIGlet = "3064a664-84fe-4d92-92c7-ed492f3d8fae"
@@ -16,7 +16,7 @@ FIGlet = "0.2"
 Graphs = "1.4"
 PyCall = "1.92"
 Xtals = "0.3"
-julia = "1.6"
+julia = "^1.1"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
