--- a/Project.toml
+++ b/Project.toml
@@ -12,11 +12,11 @@ UUIDs = "cf7118a7-6976-5b1a-9a39-7adc72f591a4"
 Xtals = "ede5f01d-793e-4c47-9885-c447d1f18d6d"
 
 [compat]
-FIGlet = "0.2"
-Graphs = "1.4"
-PyCall = "1.92"
-Xtals = "0.3"
-julia = "1.6"
+FIGlet = "^0.2"
+Graphs = "^1.4"
+PyCall = "^1.92"
+Xtals = "^0.3"
+julia = "^1.7"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
