--- a/Project.toml
+++ b/Project.toml
@@ -17,7 +17,7 @@ Aqua = "~0.5.0"
 FIGlet = "~0.2.0"
 Graphs = "1.4.0"
 PyCall = "1.92.0"
-Xtals = "~0.3.0"
+Xtals = "~0.3.0, ~0.4.0"
 julia = "1.5"
 
 [extras]
